# octomind-tap

./: .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  INSTRUCTIONS.md  README.md  review-card.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yml  new-agent.yml
.github/workflows/: lint.yml  test-deps.yml
agents/ai/: engineer.toml  evals.toml  safety.toml
agents/assistant/: concierge.toml  general.toml  researcher.toml
agents/browser/: general.toml
agents/coach/: career.toml  communication.toml  fitness.toml  general.toml  habits.toml  interview.toml  productivity.toml  resume.toml  screener.toml
agents/content/: article.toml  audit.toml  blog.toml  draft.toml  (+5 more)
model/: .gitignore  README.md  eval_baselines.json  pyproject.toml
model/configs/: default.yaml  minilm_lowtemp.yaml  reranker.yaml  runtime_gate.yaml
model/scripts/: audit_data.py  augment_llm.py  build_dataset.py  build_eval_seed.py  calibrate_thresholds.py  compare_bases.py  eval.py  eval_gate.py  eval_real_compare.py  eval_reranker.py  eval_runtime_gate.py  export_onnx.py  export_onnx_reranker.py  model_soup.py  push_hf.py  train.py  train_reranker.py
scripts/: lint-capabilities.sh  lint-deps.sh  lint-manifests.sh  lint-skills.sh  setup-symlinks.sh  validate-capabilities.sh
templates/: agent.toml  capability.toml  dep-mcp.md  dep-tool.md  dep.sh  skill.md
workflows/: README.md  apply.toml  content.toml  debug.toml  develop.toml  document.toml  launch.toml  localize.toml  plan-and-build.toml  promote.toml  report.toml  research.toml  review.toml  seo.toml
(+404 files in other folders)
