[project]
name = "octomind-tap-embed"
version = "0.1.0"
description = "Fine-tune BGE-small for octomind-tap capability auto-activation"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=4.0.0",
    "torch>=2.2.0",
    "datasets>=2.18.0",
    "accelerate>=0.30.0",
    "huggingface-hub>=0.23.0",
    "optimum[onnxruntime]>=1.20.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
